# NetSpeed-Dynamic

./: .gitignore  LICENSE  LICENSE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml  node.yml  rust.yml
docs/: NAMING_AND_VERSION.md
src-tauri/: Cargo.toml  lib.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_spectrum.rs  countdown.rs  health_reminder.rs  lib.rs  music_controller.rs  notification.rs  pomodoro.rs  print_queue.rs  system_events.rs
src/components/: DynamicSet.vue  SpeedChart.vue  StatsChart.vue
src/constants/: storageKeys.ts
src/views/: LiveActive.vue  MainPanel.vue  WidgetIsland.vue
