[package]
name = "netspeed-dynamic"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "netspeed_dynamic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 添加 sysinfo 库来监控网络
sysinfo = "0.30"
windows-sys = { version = "0.59", features = [
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
] }
tauri-plugin-single-instance = "2.0.0" # 根据你的Tauri2版本调整具体小版本
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
urlencoding = "2.1.3"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
winapi = { version = "0.3", features = ["winuser", "windef", "shellapi"] }
reqwest = { version = "0.12", features = ["json"] }
windows = { version = "0.58.0", features = [
    "UI_Notifications_Management", 
    "UI_Notifications", 
    "Foundation", 
    "Foundation_Collections",
    "ApplicationModel",
    "implement"
] }
