[package]
name = "netspeed-dynamic"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "netspeed_dynamic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 添加 sysinfo 库来监控网络
sysinfo = "0.30"
windows-sys = { version = "0.59", features = [
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_System_Registry",
] }
tauri-plugin-single-instance = "2.0.0" # 根据你的Tauri2版本调整具体小版本
tokio = { version = "1", features = ["rt", "sync", "time", "net"] }
urlencoding = "2.1.3"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
winapi = { version = "0.3", features = ["winuser", "windef", "shellapi"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
once_cell = "1"
base64 = "0.22"
windows = { version = "0.58.0", features = [
    "UI_Notifications_Management", 
    "UI_Notifications", 
    "Foundation", 
    "Foundation_Collections",
    "ApplicationModel",
    "implement",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Media_Control",
    "Storage_Streams",
    "Win32_System_Power",
] }
cpal = "0.15"
rustfft = "6.2"

# Fix Dependabot: glib unsoundness GHSA - force 0.20+ (patched)
# 仅在非 Windows 平台启用：Linux/macOS 上 tao 通过 gtk 依赖 glib，需要钉到 0.20+ 修复安全告警；
# Windows 走 Win32 API，不需要原生 glib，且构建机无 pkg-config，必须排除，否则 tauri build 失败。
[target.'cfg(not(target_os = "windows"))'.dependencies]
glib = "0.20"
